--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
   # Basic role syntax check
   - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
   # Ansible lint
-  - if [ "$ANSIBLE_VERSION" = "latest" ]; then ansible-lint tests/test.yml; fi
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then ansible-lint -x ANSIBLE0016 tests/test.yml; fi
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
