--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,15 +1,14 @@
--   repo: git@github.com:pre-commit/pre-commit-hooks
-    sha: v0.8.0
-    hooks:
-    - id: check-yaml
+---
+- repo: git@github.com:pre-commit/pre-commit-hooks
+  sha: v1.2.3
+  hooks:
     - id: check-case-conflict
     - id: check-byte-order-marker
     - id: check-symlinks
     - id: forbid-new-submodules
     - id: trailing-whitespace
-- repo: https://github.com/willthames/ansible-lint.git
-  sha: v3.4.15
+    - id: fix-encoding-pragma
+- repo: https://github.com/adrienverge/yamllint.git
+  sha: v1.11.1
   hooks:
-    - id: ansible-lint
-      files: \.(yaml|yml)$
-      args: ['--exclude=.travis.yml', '-x', 'ANSIBLE0016']
+    - id: yamllint
