introduce molecule for testing

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -11,6 +11,8 @@ galaxy_info:
   platforms:
     - name: Debian
       versions:
+        - buster
+        - jessie
         - stretch
         - wheezy
 
