--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -16,7 +16,7 @@
   with_items: '{{ boot_config_lines }}'
   register: _boot_config_lines
 
-- name: restart machine
+- name: restart machine  # noqa 503
   shell: sleep 2 && shutdown -r now "/boot/config.txt config changed"
   async: 1
   poll: 0
@@ -24,7 +24,13 @@
   when: _boot_config.changed or _boot_config_lines.changed
 
 
-- name: waiting for machine to come back
-  local_action: wait_for port=22 host="{{ ansible_host|default(inventory_hostname) }}" delay=20 timeout=120
+- name: waiting for machine to come back  # noqa 503
+  delegate_to: localhost
+  connection: local
+  wait_for:
+    port: 22
+    host: "{{ ansible_ssh_host|default(ansible_host)|default(inventory_hostname) }}"
+    delay: 20
+    timeout: 120
   become: false
   when: _boot_config.changed or _boot_config_lines.changed
