--- a/.travis.yml
+++ b/.travis.yml
@@ -1,44 +1,19 @@
 ---
 sudo: required
-dist: trusty
-
+services:
+  - docker
 language: python
-python: "2.7"
 
+python:
+  - "2.7"
 env:
-  - ANSIBLE_VERSION=latest
-  - ANSIBLE_VERSION=2.4.2.0
-  - ANSIBLE_VERSION=2.3.2.0
-  - ANSIBLE_VERSION=2.2.3.0
-  - ANSIBLE_VERSION=2.1.6.0
-  - ANSIBLE_VERSION=2.0.2.0
-  - ANSIBLE_VERSION=1.9.6
-
-# Install ansible
-addons:
-  apt:
-    packages:
-      - python-pip
-
-before_install:
-  - sudo apt-get update -qq
-
-install:
-  # Install ansible and linter
-  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install --no-binary ansible ansible; else pip install --no-binary ansible ansible==$ANSIBLE_VERSION; fi
-  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible-lint==3.4.15; fi
-
-  # Double check version
-  - ansible --version
-
-  # Create ansible.cfg with correct roles_path
-  - printf '[defaults]\nroles_path=../' >ansible.cfg
-
-script:
-  # Basic role syntax check
-  - ansible-playbook tests/test.yml -i tests/inventory --syntax-check
-  # Ansible lint
-  - if [ "$ANSIBLE_VERSION" = "latest" ]; then ansible-lint -x ANSIBLE0016 tests/test.yml; fi
+  - ANSIBLE="2.4"
+  - ANSIBLE="2.5"
+  - ANSIBLE="2.6"
+  - ANSIBLE="2.7"
+  - ANSIBLE="2.8"
+install: pip install tox-travis
+script: tox
 
 notifications:
   webhooks: https://galaxy.ansible.com/api/v1/notifications/
