drop python2, ansible 2.4, add ansible 2.9, debian buster, minor upgrades

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,6 +8,8 @@ driver:
 lint:
   name: yamllint
 platforms:
+  - name: rpibootconfig-debian-buster
+    image: debian:buster
   - name: rpibootconfig-debian-stretch
     image: debian:stretch
   - name: rpibootconfig-debian-jessie
