--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
   author: Paul Kremer
+  role_name: rpi_boot_config
   description: Configure raspberry pi /boot/config.txt
   company: Snakeoil
 
