Add test support for ansible 2.10

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion = 1.8
-envlist = py{36}-ansible{28,29}
+envlist = py{36}-ansible{28,29,210}
 skipsdist = true
 
 [testenv]
@@ -12,6 +12,7 @@ deps =
     ansible28: testinfra>=3.0.4
     ansible28: ansible>=2.8,<2.9
     ansible29: ansible>=2.9,<2.10
+    ansible210: ansible>=2.10,<2.11
 commands =
     pip list
     molecule --version
@@ -21,9 +22,10 @@ commands =
 
 [travis]
 os =
-  linux: py{36}-ansible{28,29}
+  linux: py{36}-ansible{28,29,210}
 
 [travis:env]
 ANSIBLE =
   2.8: ansible28
   2.9: ansible29
+  2.10: ansible210
