--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,8 @@ env:
   - ANSIBLE="2.8"
   - ANSIBLE="2.9"
   - ANSIBLE="2.10"
+before_install:
+  - python -m pip install --upgrade pip
 install: pip install tox-travis
 script: tox
 
