Make path to the config.txt file configurable
The `config.txt` file, that's loaded as part of the boot process of
Raspberry Pi's, should be in the same directory as the firmware files
and kernel.
Raspberry Pi OS mounts this path at `/boot`, as do many others. However
some distributions use a different path. For example Debian for the
Raspberry Pi (https://raspi.debian.net) uses `/boot/firmware`.

This commit adds variable `rpi_boot_config_file` to allow users to
specify where `config.txt` is located on their device/distribution.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,9 @@
 ---
 # defaults for rpi-boot-config
 
+# Path to the Raspberry Pi boot configuration file
+rpi_boot_config_file: /boot/config.txt
+
 boot_config: {}
 #  gpu_mem: 64
 
