--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   - ANSIBLE="3.0"
 before_install:
   - python -m pip install --upgrade wheel
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
 install: pip install tox-travis
 script: tox
 
