--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         python-version: [3.7, 3.8, 3.9]
-        ansible-version: [2.9, 2.10, 3.0]
+        ansible-version: ['2.9', '2.10', '3.0']
 
     steps:
       - uses: actions/checkout@v1
@@ -26,4 +26,4 @@ jobs:
       - name: Test with tox
         run: tox
         env:
-          ANSBILE: ${{ matrix.ansible-version }}
+          ANSIBLE: ${{ matrix.ansible-version }}
