--- a/tox.ini
+++ b/tox.ini
@@ -21,8 +21,9 @@ commands =
 os =
   linux: py{37,38,39}-ansible{29,210,30}
 
-[travis:env]
+[gh-actions]
 ANSIBLE =
   2.9: ansible29
   2.10: ansible210
   3.0: ansible30
+
