--- a/tox.ini
+++ b/tox.ini
@@ -22,6 +22,10 @@ os =
   linux: py{37,38,39}-ansible{29,210,30}
 
 [gh-actions]
+python =
+    3.7: py37
+    3.8: py38
+    3.9: py39
 ANSIBLE =
   2.9: ansible29
   2.10: ansible210
