--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,15 @@
 [tox]
 minversion = 1.8
-envlist = py{37,38,39}-ansible{29,210,30}
+envlist = py{38,39}-ansible{210,3,4}
 skipsdist = true
 
 [testenv]
 passenv = *
 deps =
     -rrequirements.txt
-    ansible29: ansible>=2.9,<2.10
     ansible210: ansible>=2.10,<2.11
-    ansible30: ansible>=3.0,<3.1
+    ansible3: ansible>=3.0,<4.0
+    ansible4: ansible>=4.0,<5.0
 commands =
     pip list
     molecule --version
@@ -19,11 +19,10 @@ commands =
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
+[gh-actions:env]
 ANSIBLE =
-  2.9: ansible29
   2.10: ansible210
-  3.0: ansible30
-
+  3: ansible3
+  4: ansible4
