--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -3,4 +3,4 @@
   hosts: all
   gather_facts: false
   roles:
-    - {role: robertdebock.bootstrap, bootstrap_preview: false}
+    - {role: robertdebock.bootstrap}
