Upgrades and CI fixes

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [3.8, 3.9]
-        ansible-version: ['2.10', '3', '4']
+        ansible-version: ['4', '5']
 
     steps:
       - uses: actions/checkout@v3
