--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-molecule==3.5.2
-ansible-lint==5.3.2
+molecule==3.6.1
+ansible-lint==5.4.0
 molecule-docker==1.1.0
 docker==5.0.3
-testinfra==6.0.0
+pytest-testinfra==6.0.0
 yamllint==1.26.3
