--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,14 @@
 [tox]
 minversion = 1.8
-envlist = py{37,38,39}-ansible{29,210,30}
+envlist = py{38,39,310}-ansible{5,6}
 skipsdist = true
 
 [testenv]
 passenv = *
 deps =
     -rrequirements.txt
-    ansible29: ansible>=2.9,<2.10
-    ansible210: ansible>=2.10,<2.11
-    ansible30: ansible>=3.0,<3.1
+    ansible5: ansible>=5.0,<6.0
+    ansible6: ansible>=6.0,<7.0
 commands =
     pip list
     molecule --version
@@ -17,12 +16,12 @@ commands =
     ansible-lint --version
     molecule test
 
-[travis]
-os =
-  linux: py{37,38,39}-ansible{29,210,30}
-
-[travis:env]
+[gh-actions]
+python =
+    3.8: py38
+    3.9: py39
+    3.10: py310
+[gh-actions:env]
 ANSIBLE =
-  2.9: ansible29
-  2.10: ansible210
-  3.0: ansible30
+  5: ansible5
+  6: ansible6
