--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,16 +2,18 @@
 galaxy_info:
   author: Paul Kremer
   role_name: rpi_boot_config
+  namespace: infothrill
   description: Configure raspberry pi boot config.txt
   company: Snakeoil
 
   license: MIT
 
-  min_ansible_version: 2.8
+  min_ansible_version: "5.0"
 
   platforms:
     - name: Debian
       versions:
+        - bullseye
         - buster
         - jessie
         - stretch
