--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-ansible-lint==5.0.2
-molecule==3.2.3
-molecule-docker==0.3.3
-docker==4.4.4
-testinfra>=3.0.4
+molecule==4.0.1
+ansible-lint==6.8.2
+molecule-docker==2.1.0
+docker==6.0.0
+pytest-testinfra==6.8.0
+yamllint==1.28.0
