--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: ['3.9', '3.10', '3.11']
-        ansible-version: ['6', '7']
+        python-version: ['3.10', '3.11', '3.12', '3.13']
+        ansible-version: ['8', '9']
 
     steps:
       - uses: actions/checkout@v5
